Fix signin flow - remove profile setup redirect from login
- Updated backend /auth/login endpoint to return onboarding_completed: true for existing users
- Modified frontend login page to always redirect to dashboard after successful login
- Ensured signup flow still redirects to profile setup for new users
- Profile setup is now a one-time process during signup only

Authentication flows:
- New Users: Signup → Profile Setup → Dashboard
- Existing Users: Login → Dashboard (no profile setup)

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ couple-compass/backend/app/models/__pycache__/
 couple-compass/backend/app/schemas/__pycache__/
 couple-compass/backend/app/utils/__pycache__/
 couple-compass/backend/app/services/__pycache__/
+.env
