--- a/couple-compass/frontend/package.json
+++ b/couple-compass/frontend/package.json
@@ -26,9 +26,6 @@
     "docker:down:dev": "docker-compose -f docker-compose.dev.yml down"
   },
   "dependencies": {
-    "next": "14.0.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "@apollo/client": "^3.8.8",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
@@ -45,8 +42,6 @@
     "@radix-ui/react-tooltip": "^1.0.7",
     "@tanstack/react-query": "^5.8.4",
     "@tanstack/react-query-devtools": "^5.8.4",
-    "next-auth": "5.0.0-beta.3",
-    "next-pwa": "^5.6.0",
     "axios": "^1.6.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
@@ -54,6 +49,11 @@
     "framer-motion": "^10.16.16",
     "graphql": "^16.8.1",
     "lucide-react": "^0.294.0",
+    "next": "^14.2.32",
+    "next-auth": "5.0.0-beta.3",
+    "next-pwa": "^5.6.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.48.2",
     "recharts": "^2.8.0",
