--- a/couple-compass/backend/requirements.txt
+++ b/couple-compass/backend/requirements.txt
@@ -23,6 +23,7 @@ redis>=4.5.2,<5.0.0
 
 # AI and external services
 openai==1.3.7
+google-generativeai==0.3.2
 boto3==1.34.0
 pinecone-client==3.0.3
 websockets==12.0
